# scrAInshots

./: .env.example  .gitignore  EASY_EMAIL_SETUP.md  MIND_MANAGER_README.md  Makefile  OUTLOOK_SETUP_GUIDE.md  README.md  api_flask_server.py  api_server.py  batch_processor.py  config_manager.py  database_manager.py  email_analyzer.py  fireflies_extractor.py  gemini_mind_processor.py  llm_api.py  local_llm.py  mind_manager.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quickstart.sh  run_mind_evolution.py  scan_photos_screenshots.py  screenshot_processor.py  screenshot_processor_unified.py  test_mind_manager.py  verify_db.py
integrations/: __init__.py  concept_extractor.py  data_models.py  fireflies_integration.py  macos_notes.py  macos_photos.py  outlook_integration.py  simple_email_integration.py
screenshot-viewer/: electron.js  next.config.js  package.json  preload.js  tailwind.config.js
screenshot-viewer/src/app/: globals.css  layout.tsx  page.tsx
screenshot-viewer/src/app/api/config/: route.ts
screenshot-viewer/src/app/api/llm/: route.ts
screenshot-viewer/src/app/api/mind-manager/: route.ts
screenshot-viewer/src/app/api/open-file/: route.ts
screenshot-viewer/src/app/api/screenshots/: route.ts
screenshot-viewer/src/app/processing/: page.tsx
screenshot-viewer/src/components/: IntegrationsConfig.tsx  MindMapViewer.tsx  Navigation.tsx  Settings.tsx  TimeHistogram.tsx  UnifiedTimeline.tsx  WordCloud.tsx
